Fix para spacing

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
 .para {
   font-size: 12px;
   margin-top: 0;
+  margin-bottom: 16px;
   color: var(--b3);
 }
 
